added the ability to get an image
