# docs/swagger.json
@@ -55,6 +55,23 @@
                     }
                 }
             }
+        },
+        "/images/{path}": {
+            "get": {
+                "tags": [
+                    "изображения"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "пути к изображению",
+                        "name": "path",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
